--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,31 @@
 ---
 # defaults file for ansible-users-role
+# miniconda installation directory
+miniconda_installation_dir: /usr/local/anaconda
+
+# default users values: set users that need to be defined in the system
+# in group_vars in this way
+# users:
+#   - name: <user_name>
+#     ssh-keys:
+#       - <public key1>
+#       - <public key2>
+users: []
+
+# custom groups to add to the system. A list of values
+# the groups variables contain information on hosts groups
+custom_groups: []
+
+# defining user groups. Set the group name as a key and users belonging in that group
+# as a list. ex
+# user_groups:
+#   docker:
+#     - <user1>
+#     - <user2>
+#
+#   sudo:
+#     - <user1>
+user_groups: {}
+
+# this is the default version installed with dotfiles
+dotfiles_version: ubuntu
