--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -34,6 +34,9 @@
     mode: "g+ws"
     group: "{{ item }}"
   with_items: "{{ custom_groups }}"
+  tags:
+    - groups
+    - configure
 
 - name: Get all groups
   getent:
@@ -68,6 +71,8 @@
     - configure
 
 - name: Create users .ssh folder
+  become: True
+  become_user: "{{ item.name }}"
   file:
     path: "~{{ item.name }}/.ssh"
     state: directory
@@ -75,9 +80,12 @@
     group: "{{ item.name }}"
     mode: 0700
   with_items: "{{ users }}"
+  when:
+    - item.name in getent_passwd.keys()
   tags:
     - users
     - configure
+    - ssh-keys
 
 - name: Add users ssh keys
   lineinfile:
@@ -91,9 +99,12 @@
   with_subelements:
     - "{{ users }}"
     - ssh-keys
+  when:
+    - item.0.name in getent_passwd.keys()
   tags:
     - users
     - configure
+    - ssh-keys
 
 # execute stuff to configure dotfiles
 - include_tasks: dotfiles.yml
@@ -101,12 +112,12 @@
     dotfiles_user: "{{ outer_item.name }}"
   with_items: "{{ users }}"
   when: outer_item.dotfiles is defined and outer_item.dotfiles is true
-  tags:
-    - users
-    - configure
   # don't use item name, since it's used in dotfiles tasks
   loop_control:
     loop_var: outer_item
+  tags:
+    - users
+    - configure
 
 # don't initialize conda if already activated
 - name: activate conda environment for all users
@@ -123,3 +134,20 @@
   tags:
     - users
     - configure
+    - conda_configure
+
+- name: replace conda executable path
+  ansible.builtin.replace:
+    path: "~{{ item.name }}/.bashrc"
+    after: "conda initialize"
+    regexp: "Miniconda3-py[0-9]+_[0-9]+.[0-9]+.[0-9]+-Linux-x86_64"
+    replace: "anaconda"
+  become: True
+  become_user: "{{ item.name }}"
+  when:
+    - item.name in getent_passwd.keys()
+  with_items: "{{ users }}"
+  tags:
+    - users
+    - configure
+    - conda_configure
