:bug: fix variable name when miniconda role is not execute
fix staff in instances where no miniconda role is executed

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 
 # miniconda installation directory
 miniconda_installation_dir: /usr/local/anaconda
+miniconda_conda_bin: "{{ miniconda_installation_dir }}/bin"
 
 # specify root keys here
 root_keys: []
